--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
      </div>
    </div>
    </header> 
-    <div class="container page">
+   <!-- Content starts here -->
+    <div class="container">
         <div class="row">
             <div class="txt col-lg-6 col-sm-12 pt-3">
               <img src="img/pix2.png" alt="" height="auto" width="98%">
@@ -62,11 +63,51 @@
                 <h2 class="main-text">Made For You With Love</h2>
                 <h5 class="mini-text">Baking with love,makes it delicious.</h5>
                 <p class="sub-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut veritatis error est, assumenda aspernatur fugiat unde odio quo quidem corrupti dolorem ratione debitis odit magnam exercitationem dolore autem atque vel ea? Ipsa necessitatibus officiis aspernatur, minima vel modi ullam, optio sequi ex deleniti perspiciatis eius. Nulla fuga iure aut quam illo et! Reiciendis, ea suscipit! In sed cum sunt atque. Officia ipsam molestias explicabo porro ratione inventore sapiente dolores debitis vitae cumque consequatur iure laborum adipisci, iusto perspiciatis fuga sed, autem consectetur ipsum laudantium accusamus delectus. Sunt animi fugit eligendi? Adipisci vero fuga saepe, nostrum molestias, nesciunt fugit beatae enim ipsam modi ad est sint necessitatibus obcaecati dolorum? Rem nemo iusto reprehenderit, esse voluptate eos at, dolorem atque error facere perferendis magni tempora itaque totam, ab accusantium id ipsum temporibus possimus quasi. Nemo ipsam doloremque sint dolore labore omnis quae perferendis reprehenderit cum, dolor consequuntur dicta  error voluptates amet pariatur! Saepe placeat </p>
-
             </div>
         </div>
     </div>
-   
+    <!-- contact -->
+    <div class="container contact">
+      <div class="row">
+        <div class="col-lg-6 col-sm-12">
+           <h4 class="main-one">Order Now</h4>
+           <h5 class="main-two">Get your products today</h5>
+           <p class="main-sub">In our shop we stock a range of the bread,cakes and <br> confectionery to order, along with cake boards and boxes to buy</p>
+           <p class="mini-sub">Premium services and beyond your expectation.<br>
+              We strive to keep a good selection of our products in store.<br>
+            Our talented bakers also make customized celebration cakes.<br>
+          We have a takeaway menu offering breakfast delights.</p>
+          <br>
+          <br>
+          <p class="main-sub">The shop is open <span class="main-small">Monday to Friday from 8am-7pm</span></p>
+        </div>
+        <form class="info">
+          <div class="row">
+              <div class="col">
+                 <input type="text" class="form-control" placeholder="Name">
+              </div>
+              <div class="col">
+                 <input type="text" class="form-control" placeholder="Email">
+              </div>
+          </div>
+          <div class="row" style="
+          margin-top: 9px">
+            <div class="col ">
+               <input type="text" class="form-control" placeholder="Phone">
+            </div>
+            <div class="col">
+               <input type="text" class="form-control" placeholder="Address">
+            </div>
+          </div>
+          <div class="row" style="
+          margin-top: 9px">
+            <div class="col">
+              <input type="text" class="form-control" placeholder="Choose Products">
+            </div>
+        </div>
+        </form>
+      </div>
+   </div>
 
 
 
