products of areas

--- a/index.html
+++ b/index.html
@@ -103,11 +103,83 @@
           margin-top: 9px">
             <div class="col">
               <input type="text" class="form-control" placeholder="Choose Products">
+              <a href="#" class="btn mt-3">send</a>
             </div>
         </div>
         </form>
       </div>
    </div>
+     <!-- Services -->
+     <div class="container">
+       <div class="offers">
+         <h2>Our Services</h2>
+         <h6>covered in these areas</h6>
+        </div>
+     </div>
+    <div class="container-fluid">
+      <div class="row">
+       <div class="col-sm-12">
+         <div class="container">
+           <div class="row">
+             <div class="col-sm-12 col-lg-6">
+              <div class="card" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+             </div>
+             <div class="col-sm-12 col-lg-6">
+              <div class="card" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+             </div>
+              <div class="container">
+                <div class="row">
+                  <div class="col-sm-12 col-lg-6">
+                    <div class="card" style="width: 18rem;">
+                      <img src="..." class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                      </div>
+                    </div>
+                   </div>
+                   <div class="col-sm-12 col-lg-6">
+                    <div class="card" style="width: 18rem;">
+                      <img src="..." class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                      </div>
+                    </div>
+                   </div>
+      
+                </div>
+              </div>
+           </div>
+         </div>
+       </div>
+      </div>
+    </div>
+
+
+
+
+
+
+
+
+
 
 
 
