services,departments,footer

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
    </div>
    </header> 
    <!-- Content starts here -->
+   <section>
     <div class="container">
         <div class="row">
             <div class="txt col-lg-6 col-sm-12 pt-3">
@@ -77,106 +78,238 @@
               We strive to keep a good selection of our products in store.<br>
             Our talented bakers also make customized celebration cakes.<br>
           We have a takeaway menu offering breakfast delights.</p>
-          <br>
-          <br>
           <p class="main-sub">The shop is open <span class="main-small">Monday to Friday from 8am-7pm</span></p>
         </div>
         <form class="info">
+          <div class="container">
           <div class="row">
-              <div class="col">
+              <div class="col-sm-6">
                  <input type="text" class="form-control" placeholder="Name">
               </div>
-              <div class="col">
+              <div class="col-sm-6">
                  <input type="text" class="form-control" placeholder="Email">
               </div>
           </div>
           <div class="row" style="
           margin-top: 9px">
-            <div class="col ">
+            <div class=" col-sm-6 ">
                <input type="text" class="form-control" placeholder="Phone">
             </div>
-            <div class="col">
+            <div class=" col-sm-6">
                <input type="text" class="form-control" placeholder="Address">
             </div>
           </div>
           <div class="row" style="
           margin-top: 9px">
-            <div class="col">
+            <div class="col-lg-12 col-sm-6">
               <input type="text" class="form-control" placeholder="Choose Products">
-              <a href="#" class="btn mt-3">send</a>
+              <a href="#" class="btn mt-2">send</a>
             </div>
         </div>
+      </div>
         </form>
       </div>
    </div>
-     <!-- Services -->
-     <div class="container">
-       <div class="offers">
-         <h2>Our Services</h2>
-         <h6>covered in these areas</h6>
-        </div>
-     </div>
-    <div class="container-fluid">
-      <div class="row">
-       <div class="col-sm-12">
-         <div class="container">
-           <div class="row">
-             <div class="col-sm-12 col-lg-6">
-              <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-              </div>
-             </div>
-             <div class="col-sm-12 col-lg-6">
-              <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-              </div>
-             </div>
-              <div class="container">
-                <div class="row">
-                  <div class="col-sm-12 col-lg-6">
-                    <div class="card" style="width: 18rem;">
-                      <img src="..." class="card-img-top" alt="...">
-                      <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                      </div>
-                    </div>
-                   </div>
-                   <div class="col-sm-12 col-lg-6">
-                    <div class="card" style="width: 18rem;">
-                      <img src="..." class="card-img-top" alt="...">
-                      <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                      </div>
-                    </div>
-                   </div>
-      
-                </div>
-              </div>
-           </div>
-         </div>
-       </div>
+  </section>
+     <!-- Services  -->
+     <section class="parts pt-1 pb-3">
+      <div class="dept pt-1 mb-2">
+          <h3 class="dept">Our Departments</h3>
+          <p class="dept-text">Lmedic medical care socialises in various services for the <br> convenience of the patients</p>
       </div>
+     <div class="container-dept mr-5 ml-5 pl-3 pr-3">
+      <div class="row">
+       <div class="col-sm-6 col-md-3 pt-1">
+           <div class="card text-center depts">
+               <img src="img/brain.jpg" class="card-img-top" alt="...">
+               <div class="card-block">
+                 <h4 class="card-title change">Psychiatry</h4>
+                 <div class="card-text"></div>
+               </div>
+             </div>
+           </div>
+           <div class="col-sm-6 col-md-3 pt-1">
+               <div class="card text-center depts">
+                   <img src="img/icon5.jpg" class="card-img-top" alt="...">
+                   <div class="card-block">
+                     <h4 class="card-title change">Laboratory</h4>
+                     <div class="card-text"></div>
+                   </div>
+                 </div>
+           </div> 
+            <div class="col-sm-6 col-md-3 pt-1">
+               <div class="card text-center depts">
+                   <img src="img/icon11.jpg" class="card-img-top" alt="...">
+                   <div class="card-block">
+                     <h4 class="card-title change">Gynecology
+                     <div class="card-text"></div>
+                   </div>
+                 </div>
+            </div>   
+            <div class="col-sm-6 col-md-3 pt-1">
+               <div class="card text-center depts">
+                   <img src="img/icon8.jpg" class="card-img-top" alt="...">
+                   <div class="card-block">
+                     <h4 class="card-title change">Medicine</h4>
+                     <div class="card-text"></div>
+                   </div>
+                 </div>
+            </div>      
+      </div>   
+   </div>
+</section>
+
+         <!--  testomony -->
+     <section>
+    <div class="padding  testimony">
+      <div class="container">
+          <div class="text-center">
+              <h4 class="main-word" >Client's Testimonial</h4>
+              <h5 class="mini-word">What others say about us</h5>
+          </div>
+          <div class="row">
+              <div class="col-lg-12 text-center paragragh">
+                  <img src="img/pix10.png" alt="testimony" class="" style="margin-top: 15px;"> 
+                  <p>
+                      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta ullam facilis fuga laborum
+                      facere voluptatum, culpa fugit nobis, incidunt assumenda veniam provident obcaecati saepe,
+                      estad sed maxime corrupti placeat!
+                      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum provident fugit maiores.
+                      Assumenda nostrum vitae accusantium obcaecati eveniet. Quas dolor nesciunt totam doloribus
+                      atque
+                      dicta quaerat maiores? Dignissimos, consequuntur consequatur?
+                      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae ipsum unde, libero
+                      maiores
+                      et, adipisci quidem aperiam facilis ducimus inventore accusantium, iusto suscipit temporibus
+                      blanditiis laudantium nemo eveniet optio. Enim.
+                  </p>
+                  <hr>
+                  <p class="name"> -Julian Wan</p>
+                  <p class="status">Department of Global Health - University of Washington</p>
+              </div>
+          </div>
+      </div>
+  </div>
+   <!-- content for bakery -->
+  <section class="parts pt-1 pb-3">
+    <div class="dept pt-1 mb-2">
+        <h2 class="dept">Our latest bakery products</h2>
+        <h5 class="dept-text">Check some of our best products and feel the great passion for food.</h5>
     </div>
-
-
-
-
-
-
+   <div class="container-dept mr-5 ml-5 pl-3 pr-3">
+    <div class="row">
+     <div class="col-sm-6 col-md-3 pt-1">
+         <div class="card text-center depts">
+             <img src="img/pix3.png" class="card-img" alt="...">
+             <div class="card-block">
+               <h4 class="card-title change"></h4>
+               <div class="card-text"></div>
+             </div>
+           </div>
+                <h2 class="title">Sourdough</h2>
+                <p class="mini-title">Lorem, ipsum dolor.</p>
+                 <p class="prize">$3.25</p>
+         </div>
+         <div class="col-sm-6 col-md-3 pt-1">
+             <div class="card text-center depts">
+                 <img src="img/pix3.png" class="card-img" alt="...">
+                 <div class="card-block">
+                   <h4 class="card-title change"></h4>
+                   <div class="card-text"></div>
+                 </div>
+               </div>
+                   <h2 class="title">Sourdough</h2>
+                   <p class="mini-title">Lorem, ipsum dolor.</p>
+                  <p class="prize">$3.25</p>
+         </div> 
+         <div class="col-sm-6 col-md-3 pt-1">
+             <div class="card text-center depts">
+                 <img src="img/pix3.png" class="card-img" alt="...">
+                 <div class="card-block">
+                   <h4 class="card-title change "></h4>
+                   <div class="card-text"></div>
+                 </div>
+               </div>
+                    <h2 class="title">Sourdough</h2>
+                   <p class="mini-title">Lorem, ipsum dolor.</p>
+                 <p class="prize">$3.25</p>
+          </div>
+          <div class="col-sm-6 col-md-3 pt-1">
+             <div class="card text-center depts">
+                 <img src="img/pix3.png" class="card-img" alt="...">
+                 <div class="card-block">
+                   <h4 class="card-title change"></h4>
+                   <div class="card-text"></div>
+                 </div>
+               </div>
+                   <h2 class="title">Sourdough</h2>
+                  <p class="mini-title">Lorem, ipsum dolor.</p>
+                 <p class="prize">$3.25</p>
+          </div> 
+          <div class="col-sm-6 col-md-3 pt-1">
+             <div class="card text-center depts">
+                 <img src="img/pix3.png" class="card-img" alt="...">
+                 <div class="card-block">
+                   <h4 class="card-title change"></h4>
+                   <div class="card-text"></div>
+                 </div>
+               </div>
+                  <h2 class="title">Sourdough</h2>
+                  <p class="mini-title">Lorem, ipsum dolor.</p>
+                 <p class="prize">$3.25</p>
+          </div>   
+          <div class="col-sm-6 col-md-3 pt-1">
+             <div class="card text-center depts">
+                 <img src="img/pix3.png" class="card-img" alt="...">
+                 <div class="card-block">
+                   <h4 class="card-title change"></h4>
+                   <div class="card-text"></div>
+                 </div>
+               </div>
+                  <h2 class="title">Sourdough</h2>
+                  <p class="mini-title">Lorem, ipsum dolor.</p>
+                  <p class="prize">$3.25</p>
+          </div> 
+          <div class="col-sm-6 col-md-3 pt-1">
+             <div class="card text-center depts">
+                 <img src="img/pix3.png" class="card-img" alt="...">
+                 <div class="card-block">
+                   <h4 class="card-title change"></h4>
+                   <div class="card-text"></div>
+                 </div>
+               </div>
+                   <h2 class="title">Sourdough</h2>
+                   <p class="mini-title">Lorem, ipsum dolor.</p>
+                    <p class="prize">$3.25</p>
+              </div>  
+          <div class="col-sm-6 col-md-3 pt-1 pl-20">
+             <div class="card text-center depts">
+                    <img src="img/pix3.png" class="card-img" alt="...">
+                <div class="card-block">
+                    <h4 class="card-title change"></h4>
+                    <div class="card-text"></div>
+                 </div>
+              </div>
+               <h2 class="title">Sourdough</h2>
+                <p class="mini-title">Lorem, ipsum dolor.</p>
+                 <p class="prize">$3.25</p>
+             </div>    
+    </div>   
+ </div>
+</section>
+  <!-- footer -->
+ <section>
+   <div class="container">
+     <div class="row">
+       <div class="col-lg-6 col-sm-12 foot">
+          <h2 class="news">Join Our Newsletter</h2>
+          <p class="updates">We'll make sure to send you sweet updates and specials</p>
+          <input type="text">
+       </div>
+     </div>
+   </div>
+ </section>
+   
 
 
 
