--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/icon-font.css">
     <link rel="stylesheet" href="css/style.css">
 
     <title>Envato Template</title>
@@ -298,19 +300,19 @@
  </div>
 </section>
   <!-- footer -->
- <section>
+ <footer id="footer">
    <div class="container">
-     <div class="row">
        <div class="col-lg-6 col-sm-12 foot">
           <h2 class="news">Join Our Newsletter</h2>
           <p class="updates">We'll make sure to send you sweet updates and specials</p>
-          <input type="text">
-       </div>
+          <input type="text" class="form-control" placeholder="Email" class="fab fa-instagram-square">
      </div>
    </div>
- </section>
+  </footer> 
    
+  
 
+        
 
 
 
