--- a/index.html
+++ b/index.html
@@ -302,29 +302,21 @@
   <!-- footer -->
  <footer id="footer">
    <div class="container">
-       <div class="col-lg-6 col-sm-12 foot">
+       <div class="col-lg-6 col-sm-4 foot">
           <h2 class="news">Join Our Newsletter</h2>
           <p class="updates">We'll make sure to send you sweet updates and specials</p>
           <input type="text" class="form-control" placeholder="Email" class="fab fa-instagram-square">
      </div>
+     
+   </div>
+   <div class="col-lg-6 col-md-4 icons">
+    <ul>
+      <li><i class="fab fa-facebook"></i></li>
+      <li><i class="fab fa-instagram-square"></i></li>
+      <li><i class="fab fa-twitter-square"></i></li>
+    </ul>
    </div>
   </footer> 
-   
-  
-
-        
-
-
-
-
-
-
-
-
-
-
-
-
  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
