--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
   <!-- footer -->
  <footer id="footer">
    <div class="container">
-       <div class="col-lg-6 col-sm-4 foot">
+       <div class="col-lg-6 col-md-4 foot">
           <h2 class="news">Join Our Newsletter</h2>
           <p class="updates">We'll make sure to send you sweet updates and specials</p>
           <input type="text" class="form-control" placeholder="Email" class="fab fa-instagram-square">
