--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <!-- image in the header -->
    <header id="header">
        <!-- navbar properties -->
-    <nav class="navbar navbar-expand-sm">
-        <a class="navbar-brand" href="#"><img src="img/logo.png" alt="logo"></a>
+    <nav class="navbar navbar-expand-md">
+        <a class="navbar-brand" href="#"><img src="img/logo.png" style="width: 120px;" alt="logo"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -37,7 +37,7 @@
             <a class="nav-link" href="#">Blog</a>
           </li>
           <li class="nav-item">
-            <a cl ass="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="#">Contact</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Order</a>
@@ -55,6 +55,7 @@
          <a href="#" class="btn">order now</a>
      </div>
    </div>
+   
    </header> 
    <!-- Content starts here -->
    <section>
